<resources>
    <string name="app_name">HeartBeat</string>
    <string name="version">Version 1.0</string>
    <string name="dev_title">Developer Team:</string>
    <string name="dev_armas">Arvi Armas</string>
    <string name="dev_geduriagao">Decebel Gedurigao</string>
    <string name="dev_torres">Mark Anthony Torres</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="proceed">PROCEED</string>
    <string name="prev">PREVIOUS</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="lets">LET\'S DO IT</string>
    <string name="cancel">CANCEL</string>
    <string name="slide_1_title">Beat Curiousity</string>
    <string name="slide_1_desc">Check your heart health status</string>
    <string name="slide_2_title">Beat Unproductivity</string>
    <string name="slide_2_desc">Change your lifestyle</string>
    <string name="slide_3_title">Beat Inconsistency</string>
    <string name="slide_3_desc">Keep your heart healthy</string>
    <string name="slide_4_title">Heart Beat</string>
    <string name="slide_4_desc">Have fun, have a healthy heart!</string>
    <string name="button_next">NEXT</string>
    <string name="button_proceed">PROCEED</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm password</string>
    <string name="prompt_fullname">Full name</string>
    <string name="prompt_username">Username</string>
    <string name="verify_asian_age">I am Asian and I am between 24 to 85 years old.</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_demo">Demographics</string>
    <string name="title_activity_lab">Laboratory Values</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_results">Risk Results</string>
    <string name="title_activity_habits">Habits</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_editprofile">Edit Profile</string>
    <string name="title_activity_addplan">Add a plan</string>
    <string name="title_activity_about">About</string>
    <string name="demo_birthday">Date of Birth</string>
    <string name="demo_gender">Gender</string>
    <string name="lab_bp">Set your Systolic and Diastolic Blood Pressure</string>
    <string name="instruction_bp">Hold/pump the bulb to set the blood pressure</string>
    <string name="lab_systolic">Systolic</string>
    <string name="lab_diastolic">Diastolic</string>
    <string name="lab_firstnum">First number</string>
    <string name="lab_secondnum">Second number</string>
    <string name="lab_chol">Set your Total Cholesterol and HDL</string>
    <string name="instruction_chol">Slide up and down to adjust</string>
    <string name="lab_totalchol">Total Cholesterol</string>
    <string name="lab_hdl">High-density Lipids</string>
    <string name="history_diabetes">Do you have a Diabetes? (Present)</string>
    <string name="history_disease">Do you have any of these diseases? (Previous or Present)</string>
    <string name="instruction_disease">Please select all of the diseases you have/had:</string>
    <string name="history_family">Do you have a first degree relative ages 60 years old and below who has/had heart attack? (Previous/Present)</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="diabetes_type1">Type 1</string>
    <string name="diabetes_type2">Type 2</string>
    <string name="disease_congestive">Congestive Heart Failure</string>
    <string name="disease_heartattack">Heart Attack/Angina</string>
    <string name="disease_valvular">Valvular Heart Disease</string>
    <string name="disease_irregular">Irregular Heart Rate</string>
    <string name="disease_rheumatoid">Rheumatoid Arthritis</string>
    <string name="disease_chronic">Chronic Kidney Disease (Stage 4 or 5)</string>
    <string name="habits_all">Choose all of your habits:</string>
    <string name="habits_smoke">Do you smoke?</string>
    <string name="habits_smoker">How many sticks do you consume daily?</string>
    <string name="habits_nonsmoker">Have you smoked before?</string>
    <string name="habits_bptreatment">Are you on blood pressure treatment?</string>
    <string name="habits_physical">How physically active are you?</string>
    <string name="habits_freetime">Set your free time:</string>
    <string name="habits_sleeptime">Set your sleeping time:</string>
    <string name="btn_sedentary">Sedentary</string>
    <string name="btn_light">Lightly active</string>
    <string name="btn_moderate">Moderately active</string>
    <string name="btn_very">Very active</string>
    <string name="btn_extreme">Extremely active</string>
    <string name="results_risk">Probability of 10-Year Risk of Heart Attack and Stroke</string>
    <string name="instruction_result">Tap each graph to view details</string>
    <string name="results_riskfactors">Risk Factors</string>
    <string name="progress_risk">Progress of risk results</string>
    <string name="plan_name">Plan name</string>
    <string name="plan_currentdate">Date</string>
    <string name="plan_freetime">Free time</string>
    <string name="plan_activity">Activities</string>
    <string name="plan_calories">Date</string>
    <string name="shop_buy">Want to buy more time?</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="goals">Goals</string>
    <string name="quest">Quests</string>
    <string name="title_activity_faq_">FAQ_Activity</string>
    <string name="instruction_goals">Complete all the goals to have a normal risk level and earn badges!</string>
</resources>