<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="capstone.heartbeat.others.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo_width_height"
            android:layout_height="@dimen/logo_width_height"
            android:src="@drawable/ic_heartbeat_red"
            android:layout_marginTop="@dimen/img_margin_top"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/btn_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/img_margin_top"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <ImageView
            android:layout_width="@dimen/logo_width_height"
            android:layout_height="@dimen/logo_width_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-20dp"
            android:src="@drawable/ic_threeprodigies" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_armas"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/btn_label"
            android:layout_marginTop="-30dp"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_geduriagao"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/btn_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_torres"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/btn_label"/>
    </LinearLayout>


</RelativeLayout>
