<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="capstone.heartbeat.HistoryActivity">

    <LinearLayout
        android:id="@+id/diabetes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/demo_question_padding"
        android:paddingLeft="@dimen/demo_question_padding"
        android:paddingRight="@dimen/demo_question_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_diabetes"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_yes"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/btn_label" />

            <Button
                android:id="@+id/btn_diabetes_no"
                android:layout_width="@dimen/btn_width_height"
                android:layout_height="@dimen/btn_width_height"
                android:layout_margin="10dp"
                android:background="@drawable/btn_circle_green" />

            <Button
                android:id="@+id/btn_diabetes_yes"
                android:layout_width="@dimen/btn_width_height"
                android:layout_height="@dimen/btn_width_height"
                android:layout_margin="10dp"
                android:background="@drawable/btn_circle_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_no"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/btn_label" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diabetes"
        android:orientation="vertical"
        android:paddingTop="@dimen/demo_question_padding"
        android:paddingLeft="@dimen/demo_question_padding"
        android:paddingRight="@dimen/demo_question_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_disease"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_disease"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/disease_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="@dimen/switch_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_congestive"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_label" />
                <Switch
                    android:id="@+id/sw_congestive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/disease_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="@dimen/switch_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_heartattack"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_label" />
                <Switch
                    android:id="@+id/sw_heartattack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/disease_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="@dimen/switch_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_valvular"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_label" />
                <Switch
                    android:id="@+id/sw_valvular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/disease_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="@dimen/switch_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_irregular"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_label" />
                <Switch
                    android:id="@+id/sw_irregular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/disease_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="@dimen/switch_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_rheumatoid"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_label" />
                <Switch
                    android:id="@+id/sw_rheumatoid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/disease_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="@dimen/switch_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_chronic"
                    android:textAlignment="center"
                    android:textSize="@dimen/btn_label" />
                <Switch
                    android:id="@+id/sw_chronic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/famhistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/demo_question_padding"
        android:layout_below="@+id/disease">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_family"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_yes"
                android:textSize="@dimen/btn_label" />

            <Button
                android:id="@+id/btn_famhistory_no"
                android:layout_width="@dimen/btn_width_height"
                android:layout_height="@dimen/btn_width_height"
                android:layout_margin="10dp"
                android:background="@drawable/btn_circle_green" />

            <Button
                android:id="@+id/btn_famhistory_yes"
                android:layout_width="@dimen/btn_width_height"
                android:layout_height="@dimen/btn_width_height"
                android:layout_margin="10dp"
                android:background="@drawable/btn_circle_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_no"
                android:textSize="@dimen/btn_label" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
